kubernetes/applications/edge-service/overlays/production/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-bookshop-ingress
spec:
  rules:
   - host: "polarbook.com"
     http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: edge-service-stable
              port:
                number: 80
